--- a/src/app/professores/professores-lista/professores-lista.component.html
+++ b/src/app/professores/professores-lista/professores-lista.component.html
@@ -29,7 +29,7 @@
             <td>{{ professor.idade }} Anos</td>
             <td>
               <span class="float-right">
-                <button class="btn btn-outline-warning mb-1 btn-sm">
+                <button class="btn btn-outline-warning mb-1 btn-sm" (click) = "onEdit(professor.id)">
                   Atualizar
                 </button>
   
