--- a/src/app/professores/professores-lista/professores-lista.component.html
+++ b/src/app/professores/professores-lista/professores-lista.component.html
@@ -1,53 +1,53 @@
 <div class="card mt-3">
-    <div class="card-header">
-      <div class="float-left">
-        <h4>Professores</h4>
-      </div>
-      <div class="float-right">
-        <button type="button" class="btn btn-primary" [routerLink]="['novo']">Novo Professor</button>
-        <button type="button" class="btn btn-secondary" (click)="onRefresh()">Atualizar</button>
-      </div>
+  <div class="card-header">
+    <div class="float-left">
+      <h4>Professores</h4>
     </div>
-    <div class="card-body">
-      <table class="table table-hover" *ngIf="professores$ | async as professores; else loading">
-        <thead>
-          <tr>
-            <th>ID</th>
-            <th>Nome</th>
-            <th>Matrícula</th>
-            <th>Área de atuação</th>
-            <th>Idade</th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let professor of professores">
-            <td>{{ professor.id }}</td>
-            <td>{{ professor.nome }}</td>
-            <td>{{ professor.matricula }}</td>
-            <td>{{ professor.area }}</td>
-            <td>{{ professor.idade }} Anos</td>
-            <td>
-              <span class="float-right">
-                <button class="btn btn-outline-warning mb-1 btn-sm" (click) = "onEdit(professor.id)">
-                  Atualizar
-                </button>
-  
-                <button class="btn btn-outline-danger mb-1 btn-sm">
-                  Remover
-                </button>
-              </span>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-  
-      <ng-template #loading>
-        <span>Carregando Professores...</span>
-      </ng-template>
-    
-  
-     <!-- <ng-template #loadingError>
+    <div class="float-right">
+      <button type="button" class="btn btn-primary" [routerLink]="['novo']">Novo Professor</button>
+      <button type="button" class="btn btn-secondary" (click)="onRefresh()">Atualizar</button>
+    </div>
+  </div>
+  <div class="card-body">
+    <table class="table table-hover" *ngIf="professores$ | async as professores; else loading">
+      <thead>
+        <tr>
+          <th>ID</th>
+          <th>Nome</th>
+          <th>Matrícula</th>
+          <th>Área de atuação</th>
+          <th>Idade</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let professor of professores">
+          <td>{{ professor.id }}</td>
+          <td>{{ professor.nome }}</td>
+          <td>{{ professor.matricula }}</td>
+          <td>{{ professor.area }}</td>
+          <td>{{ professor.idade }} Anos</td>
+          <td>
+            <span class="float-right">
+              <button class="btn btn-outline-warning mb-1 btn-sm" (click)="onEdit(professor.id)">
+                Atualizar
+              </button>
+
+              <button class="btn btn-outline-danger mb-1 btn-sm" (click)="onDelete(professor)">
+                Remover
+              </button>
+            </span>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+
+    <ng-template #loading>
+      <span>Carregando Professores...</span>
+    </ng-template>
+
+
+    <!-- <ng-template #loadingError>
         <div *ngIf="error$ | async; else loading">
           Erro ao carregar cursos. Tenta novamente mais tarde.
         </div>
@@ -55,6 +55,14 @@
           <span>Carregando Cursos...</span>
         </ng-template>
       </ng-template>-->
-  
-    </div>
+
   </div>
+</div>
+
+<ng-template #deleteModal>
+  <div class="modal-body text-center">
+    <p>Tem certeza que deseja remover esse professor?</p>
+    <button type="button" class="btn btn-default" (click) = "onConfirmDelete()" >Sim</button>
+    <button type="button" class="btn btn-primary" (click) = "onDeclineDelete()">Não</button>
+  </div>
+</ng-template>
