--- a/src/app/alunos/alunos-lista/alunos-lista.component.html
+++ b/src/app/alunos/alunos-lista/alunos-lista.component.html
@@ -4,6 +4,7 @@
         <h4>Alunos</h4>
       </div>
       <div class="float-right">
+        <button type="button" class="btn btn-dark" [routerLink]="['pesquisa']">Pesquisar</button>
         <button type="button" class="btn btn-primary" [routerLink]="['novo']">Novo Aluno</button>
         <button type="button" class="btn btn-secondary" (click)="onRefresh()">Atualizar</button>
       </div>
@@ -27,11 +28,11 @@
             <td>{{ aluno.idade }}</td>
             <td>
               <span class="float-right">
-                <button class="btn btn-outline-warning mb-1 btn-sm">
+                <button class="btn btn-outline-warning mb-1 btn-sm" (click)="onEdit(aluno.id)">
                   Atualizar
                 </button>
-  
-                <button class="btn btn-outline-danger mb-1 btn-sm">
+
+                <button class="btn btn-outline-danger mb-1 btn-sm" (click)="onDelete(aluno)">
                   Remover
                 </button>
               </span>
@@ -43,7 +44,7 @@
       <ng-template #loading>
         <span>Carregando Alunos...</span>
       </ng-template>
-    
+
 
      <!-- <ng-template #loadingError>
         <div *ngIf="error$ | async; else loading">
